[gd_scene load_steps=7 format=3 uid="uid://d2f3n7ryypk83"]

[ext_resource type="Script" path="res://_Scripts/menu.gd" id="1_yn3l5"]
[ext_resource type="Texture2D" uid="uid://cpkvts7u7bwgo" path="res://Art/Sprites/кнопка стилл континуее.png" id="2_netv1"]
[ext_resource type="Texture2D" uid="uid://d3qjplyx5kmwv" path="res://Art/Sprites/кнопка сховер континуе.png" id="3_lq4fw"]
[ext_resource type="Texture2D" uid="uid://bnujy25ptg14t" path="res://Art/Sprites/кнопка стилл эхит.png" id="4_y53lg"]
[ext_resource type="Texture2D" uid="uid://b2povnd58mf4c" path="res://Art/Sprites/кнопка эхит хвер.png" id="5_fmrvb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ml0nn"]
bg_color = Color(0.68048, 0.567523, 0.58112, 1)

[node name="Menu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yn3l5")
metadata/_edit_vertical_guides_ = [247.0]

[node name="MenuLayer" type="CanvasLayer" parent="."]
visible = false

[node name="menupanel" type="Panel" parent="MenuLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ml0nn")
metadata/_edit_use_anchors_ = true

[node name="buttonLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Exit" type="TextureButton" parent="buttonLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.427
anchor_top = 0.644
anchor_right = 0.576
anchor_bottom = 0.793
offset_left = 8.09598
offset_top = -0.312042
offset_right = 0.447937
offset_bottom = 0.135986
mouse_filter = 1
texture_normal = ExtResource("4_y53lg")
texture_pressed = ExtResource("4_y53lg")
texture_hover = ExtResource("5_fmrvb")
ignore_texture_size = true
stretch_mode = 0

[node name="Continue" type="TextureButton" parent="buttonLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.316
anchor_top = 0.059
anchor_right = 0.659
anchor_bottom = 0.522
offset_left = -0.0320129
offset_top = -0.232002
offset_right = -0.16803
offset_bottom = -0.256012
mouse_filter = 1
texture_normal = ExtResource("2_netv1")
texture_pressed = ExtResource("2_netv1")
texture_hover = ExtResource("3_lq4fw")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="buttonLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="buttonLayer/Continue" to="." method="_on_continue_pressed"]
